♻️ Static -> Template으로 index.html 파일을 이동시켰습니다. 또한 중복되는 코드들을 리팩토링 했습니다.